# Flame

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: Flame.h
src/: Flame.cpp
